HT1/cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-services
spec:
  selector:
    app: go-appp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
